--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 
 <header class="header-2">
  
-  <div class="page-header min-vh-75 relative" style="background-image: url('./assets/img/blue-wave-black.jpg'); background-size: cover; background-position: center;">
-    <!-- <span class="mask bg-gradient-primary opacity-4"></span> -->
+  <div class="page-header min-vh-75 relative" style="background-image: url('./assets/img/banner4.jpeg'); background-size: cover; background-position: center;">
+    <span class="mask bg-gradient-primary opacity-4"></span>
     <div class="container">
       <div class="row">
         <div class="col-lg-7 text-center mx-auto">
@@ -250,7 +250,7 @@
       </div>
       <div class="col-md-5 col-12 my-auto">
         <a href="https://www.creative-tim.com/product/material-kit-pro?ref=index-mk2">
-          <img class="w-100 border-radius-lg shadow-lg" src="./assets/img/phone34.png" alt="Product Image">
+          <img class="w-100 border-radius-lg shadow-lg" src="./assets/img/profile (3).jpeg" alt="Product Image">
         </a>
       </div>
     </div>
@@ -364,7 +364,7 @@
       </div>
       <div class="col-md-5 col-12 my-auto">
         <a href="">
-          <img class="w-100 border-radius-lg shadow-lg" src="./assets/img/tv2.png" alt="Product Image">
+          <img class="w-100 border-radius-lg shadow-lg" src="./assets/img/profile (2).jpeg" alt="Product Image">
         </a>
       </div>
     </div>
