--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
       </div>
       <div class="col-md-5 col-12 my-auto">
         <a href="">
-          <img class="w-100 border-radius-lg shadow-lg" src="./assets/img/profile (2).jpeg" alt="Product Image">
+          <img class="w-100 border-radius-lg shadow-lg" src="./assets/img/large.jpeg" alt="Product Image">
         </a>
       </div>
     </div>
@@ -410,7 +410,7 @@
       </div>
       <div class="col-md-5 col-12 my-auto">
         <a href="">
-          <img class="w-100 border-radius-lg " src="./assets/img/tvscreen2.png" alt="Product Image">
+          <img class="w-100 border-radius-lg " src="./assets/img/profile (2).jpeg" alt="Product Image">
         </a>
       </div>
     </div>
